--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-EditorStartupMap=/Game/Levels/Dev/Systems.Systems
+EditorStartupMap=/Game/yTemp/AI/Levels/AI_Level.AI_Level
 GlobalDefaultGameMode="/Script/Sigurd.SigurdGameMode"
 
 [/Script/Engine.RendererSettings]
