basic grid not working

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -223,3 +223,9 @@ CustomFontDPI=96
 FontDPIPreset=Unreal
 bUseCustomFontDPI=False
 
+
+[CoreRedirects]
++PropertyRedirects=(OldName="/Script/Sigurd.MapGen.gridCube",NewName="/Script/Sigurd.MapGen.GridCube")
++PropertyRedirects=(OldName="/Script/Sigurd.MapGen.grid_x",NewName="/Script/Sigurd.MapGen.Grid_X")
++PropertyRedirects=(OldName="/Script/Sigurd.MapGen.grid_y",NewName="/Script/Sigurd.MapGen.Grid_Y")
++PropertyRedirects=(OldName="/Script/Sigurd.MapGen.seed",NewName="/Script/Sigurd.MapGen.Seed")
