Perlin noise 2D and Delete Small Plots
Re-hecha la funcion de GenerateGrid.
Ahora utiliza perlin noise basandose en las coordenadas del array y un offset basado en la Seed para generar un valor 0 o 1, interpretado como si hay o no modulo.
Una vez generado pasa por la funcion DeleteSmallPlots, esta funcion itera por el array del grid buscando la isla mas grande, una vez encontrada setea a 0 todos los elementos del array que no pertenezcan a esta

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -229,3 +229,4 @@ bUseCustomFontDPI=False
 +PropertyRedirects=(OldName="/Script/Sigurd.MapGen.grid_x",NewName="/Script/Sigurd.MapGen.Grid_X")
 +PropertyRedirects=(OldName="/Script/Sigurd.MapGen.grid_y",NewName="/Script/Sigurd.MapGen.Grid_Y")
 +PropertyRedirects=(OldName="/Script/Sigurd.MapGen.seed",NewName="/Script/Sigurd.MapGen.Seed")
++PropertyRedirects=(OldName="/Script/Sigurd.MapGen.timeStep",NewName="/Script/Sigurd.MapGen.TimeStep")
