--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -230,3 +230,4 @@ bUseCustomFontDPI=False
 +PropertyRedirects=(OldName="/Script/Sigurd.MapGen.grid_y",NewName="/Script/Sigurd.MapGen.Grid_Y")
 +PropertyRedirects=(OldName="/Script/Sigurd.MapGen.seed",NewName="/Script/Sigurd.MapGen.Seed")
 +PropertyRedirects=(OldName="/Script/Sigurd.MapGen.timeStep",NewName="/Script/Sigurd.MapGen.TimeStep")
++StructRedirects=(OldName="/Script/Sigurd.ModuleTile",NewName="/Script/Sigurd.ModuleTile")
