Added noise settings

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -231,3 +231,4 @@ bUseCustomFontDPI=False
 +PropertyRedirects=(OldName="/Script/Sigurd.MapGen.seed",NewName="/Script/Sigurd.MapGen.Seed")
 +PropertyRedirects=(OldName="/Script/Sigurd.MapGen.timeStep",NewName="/Script/Sigurd.MapGen.TimeStep")
 +StructRedirects=(OldName="/Script/Sigurd.ModuleTile",NewName="/Script/Sigurd.ModuleTile")
++ClassRedirects=(OldName="/Script/Sigurd.NoiseSettings",NewName="/Script/Sigurd.FNoiseSettings")
