Separados los settings de noise en data tables
Esto permite tener settings ajustados para distintas ocasiones predeterminados

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -232,3 +232,4 @@ bUseCustomFontDPI=False
 +PropertyRedirects=(OldName="/Script/Sigurd.MapGen.timeStep",NewName="/Script/Sigurd.MapGen.TimeStep")
 +StructRedirects=(OldName="/Script/Sigurd.ModuleTile",NewName="/Script/Sigurd.ModuleTile")
 +ClassRedirects=(OldName="/Script/Sigurd.NoiseSettings",NewName="/Script/Sigurd.FNoiseSettings")
++StructRedirects=(OldName="/Script/Sigurd.NoiseSettings",NewName="/Script/Sigurd.UNoiseSettings")
