--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-EditorStartupMap=/Game/Levels/Dev/WFC_Level.WFC_Level
+EditorStartupMap=/Game/yTemp/AI/Levels/AI_Level.AI_Level
 GlobalDefaultGameMode=/Game/Blueprints/GameModes/HNS_GameMode.HNS_GameMode_C
 
 [/Script/Engine.RendererSettings]
@@ -233,3 +233,4 @@ bUseCustomFontDPI=False
 +StructRedirects=(OldName="/Script/Sigurd.ModuleTile",NewName="/Script/Sigurd.ModuleTile")
 +ClassRedirects=(OldName="/Script/Sigurd.NoiseSettings",NewName="/Script/Sigurd.FNoiseSettings")
 +StructRedirects=(OldName="/Script/Sigurd.NoiseSettings",NewName="/Script/Sigurd.UNoiseSettings")
+
