--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -222,3 +222,17 @@ CustomFontDPI=96
 FontDPIPreset=Unreal
 bUseCustomFontDPI=False
 
+[/Script/GameplayDebugger.GameplayDebuggerConfig]
+CategorySlot0=Zero
+CategorySlot1=One
+CategorySlot2=Two
+CategorySlot3=Three
+CategorySlot4=Four
+CategorySlot5=Five
+CategorySlot6=Six
+CategorySlot7=Seven
+CategorySlot8=Eight
+CategorySlot9=Nine
+CategoryRowNextKey=+
+CategoryRowPrevKey=Hyphen
+
