--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-EditorStartupMap=/Game/yTemp/AI/Levels/AI_Level.AI_Level
+EditorStartupMap=/Game/yTemp/AI/EnemyTesting.EnemyTesting
 GlobalDefaultGameMode=/Game/Blueprints/GameModes/HNS_GameMode.HNS_GameMode_C
 
 [/Script/Engine.RendererSettings]
