added take damage to combat component

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -223,3 +223,6 @@ CustomFontDPI=96
 FontDPIPreset=Unreal
 bUseCustomFontDPI=False
 
+
+[CoreRedirects]
++FunctionRedirects=(OldName="/Script/Sigurd.CombatComponent.ExecuteCurrentWeaponMontage",NewName="/Script/Sigurd.CombatComponent.ExecuteCurrentWeaponComboMontage")
