--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -226,3 +226,15 @@ bUseCustomFontDPI=False
 
 [CoreRedirects]
 +FunctionRedirects=(OldName="/Script/Sigurd.CombatComponent.ExecuteCurrentWeaponMontage",NewName="/Script/Sigurd.CombatComponent.ExecuteCurrentWeaponComboMontage")
++FunctionRedirects=(OldName="/Script/Sigurd.SigurdCharacter.TakeDamage",NewName="/Script/Sigurd.SigurdCharacter.TakeDamageSigurd")
++PropertyRedirects=(OldName="/Script/Sigurd.StaminaComponent.maxStamina",NewName="/Script/Sigurd.StaminaComponent.MaxStamina")
++PropertyRedirects=(OldName="/Script/Sigurd.StaminaComponent.currentStamina",NewName="/Script/Sigurd.StaminaComponent.CurrentStamina")
++PropertyRedirects=(OldName="/Script/Sigurd.StaminaComponent.staminaRegenRate",NewName="/Script/Sigurd.StaminaComponent.StaminaRegenRate")
++PropertyRedirects=(OldName="/Script/Sigurd.StaminaComponent.staminaDecayRate",NewName="/Script/Sigurd.StaminaComponent.StaminaDecayRate")
++PropertyRedirects=(OldName="/Script/Sigurd.StaminaComponent.tickRate",NewName="/Script/Sigurd.StaminaComponent.TickRate")
++PropertyRedirects=(OldName="/Script/Sigurd.StaminaComponent.delayTime",NewName="/Script/Sigurd.StaminaComponent.DelayTime")
++PropertyRedirects=(OldName="/Script/Sigurd.StaminaComponent.runningSpeed",NewName="/Script/Sigurd.StaminaComponent.RunningSpeed")
++PropertyRedirects=(OldName="/Script/Sigurd.StaminaComponent.walkingSpeed",NewName="/Script/Sigurd.StaminaComponent.WalkingSpeed")
++PropertyRedirects=(OldName="/Script/Sigurd.StaminaComponent.exhaustedSpeed",NewName="/Script/Sigurd.StaminaComponent.ExhaustedSpeed")
++PropertyRedirects=(OldName="/Script/Sigurd.CombatComponent.currentWeapon",NewName="/Script/Sigurd.CombatComponent.CurrentWeapon")
++PropertyRedirects=(OldName="/Script/Sigurd.CombatComponent.weaponInventory",NewName="/Script/Sigurd.CombatComponent.WeaponInventory")
