--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -238,3 +238,4 @@ bUseCustomFontDPI=False
 +PropertyRedirects=(OldName="/Script/Sigurd.StaminaComponent.exhaustedSpeed",NewName="/Script/Sigurd.StaminaComponent.ExhaustedSpeed")
 +PropertyRedirects=(OldName="/Script/Sigurd.CombatComponent.currentWeapon",NewName="/Script/Sigurd.CombatComponent.CurrentWeapon")
 +PropertyRedirects=(OldName="/Script/Sigurd.CombatComponent.weaponInventory",NewName="/Script/Sigurd.CombatComponent.WeaponInventory")
++PropertyRedirects=(OldName="/Script/Sigurd.SigurdCharacter.HealthComponent2",NewName="/Script/Sigurd.SigurdCharacter.HealthComponent")
