--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-EditorStartupMap=/Game/Levels/Dev/Systems.Systems
+EditorStartupMap=/Game/yTemp/AI/Levels/EnemyTesting.EnemyTesting
 GlobalDefaultGameMode=/Game/Blueprints/GameModes/HNS_GameMode.HNS_GameMode_C
 
 [/Script/Engine.RendererSettings]
@@ -237,3 +237,6 @@ bUseCustomFontDPI=False
 +PropertyRedirects=(OldName="/Script/Sigurd.StaminaComponent.exhaustedSpeed",NewName="/Script/Sigurd.StaminaComponent.ExhaustedSpeed")
 +PropertyRedirects=(OldName="/Script/Sigurd.CombatComponent.currentWeapon",NewName="/Script/Sigurd.CombatComponent.CurrentWeapon")
 +PropertyRedirects=(OldName="/Script/Sigurd.CombatComponent.weaponInventory",NewName="/Script/Sigurd.CombatComponent.WeaponInventory")
++ClassRedirects=(OldName="/Script/Sigurd.AICBaseEnemy",NewName="/Script/Sigurd.IcBaseEnemy")
++ClassRedirects=(OldName="/Script/Sigurd.ICBaseEnemy",NewName="/Script/Sigurd.IcBaseEnemy")
+
