AICore interface and Route fixed

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -237,4 +237,5 @@ bUseCustomFontDPI=False
 +PropertyRedirects=(OldName="/Script/Sigurd.StaminaComponent.exhaustedSpeed",NewName="/Script/Sigurd.StaminaComponent.ExhaustedSpeed")
 +PropertyRedirects=(OldName="/Script/Sigurd.CombatComponent.currentWeapon",NewName="/Script/Sigurd.CombatComponent.CurrentWeapon")
 +PropertyRedirects=(OldName="/Script/Sigurd.CombatComponent.weaponInventory",NewName="/Script/Sigurd.CombatComponent.WeaponInventory")
++ClassRedirects=(OldName="/Script/Sigurd.IEnemyAI",NewName="/Script/Sigurd.IEnemyAI")
 
