--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -222,7 +222,6 @@ CustomFontDPI=96
 FontDPIPreset=Unreal
 bUseCustomFontDPI=False
 
-
 [CoreRedirects]
 +FunctionRedirects=(OldName="/Script/Sigurd.CombatComponent.ExecuteCurrentWeaponMontage",NewName="/Script/Sigurd.CombatComponent.ExecuteCurrentWeaponComboMontage")
 +FunctionRedirects=(OldName="/Script/Sigurd.SigurdCharacter.TakeDamage",NewName="/Script/Sigurd.SigurdCharacter.TakeDamageSigurd")
@@ -238,4 +237,7 @@ bUseCustomFontDPI=False
 +PropertyRedirects=(OldName="/Script/Sigurd.CombatComponent.currentWeapon",NewName="/Script/Sigurd.CombatComponent.CurrentWeapon")
 +PropertyRedirects=(OldName="/Script/Sigurd.CombatComponent.weaponInventory",NewName="/Script/Sigurd.CombatComponent.WeaponInventory")
 +ClassRedirects=(OldName="/Script/Sigurd.IEnemyAI",NewName="/Script/Sigurd.IEnemyAI")
+
+[/Script/NavigationSystem.RecastNavMesh]
+RuntimeGeneration=DynamicModifiersOnly
 
