--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-EditorStartupMap=/Game/AI/Levels/EnemyTesting.EnemyTesting
+EditorStartupMap=/Game/Levels/Dev/VFX.VFX
 GlobalDefaultGameMode=/Game/Blueprints/GameModes/HNS_GameMode.HNS_GameMode_C
 
 [/Script/Engine.RendererSettings]
