--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-EditorStartupMap=/Game/Levels/Dev/Systems.Systems
+EditorStartupMap=/Game/Levels/Dev/Elements.Elements
 GlobalDefaultGameMode=/Game/Blueprints/GameModes/HNS_GameMode.HNS_GameMode_C
 
 [/Script/Engine.RendererSettings]
@@ -237,3 +237,6 @@ bUseCustomFontDPI=False
 +PropertyRedirects=(OldName="/Script/Sigurd.StaminaComponent.exhaustedSpeed",NewName="/Script/Sigurd.StaminaComponent.ExhaustedSpeed")
 +PropertyRedirects=(OldName="/Script/Sigurd.CombatComponent.currentWeapon",NewName="/Script/Sigurd.CombatComponent.CurrentWeapon")
 +PropertyRedirects=(OldName="/Script/Sigurd.CombatComponent.weaponInventory",NewName="/Script/Sigurd.CombatComponent.WeaponInventory")
++EnumRedirects=(OldName="/Script/Sigurd.Condition",NewName="/Script/Sigurd.ECondition")
++EnumRedirects=(OldName="/Script/Sigurd.Reaction",NewName="/Script/Sigurd.EReaction")
+
