swap to weapon actor

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-EditorStartupMap=/Game/Levels/Hack_Slash/HNS_Level.HNS_Level
+EditorStartupMap=/Game/Levels/Dev/Combat.Combat
 GlobalDefaultGameMode=/Game/Blueprints/GameModes/HNS_GameMode.HNS_GameMode_C
 
 [/Script/Engine.RendererSettings]
@@ -239,4 +239,9 @@ bUseCustomFontDPI=False
 +PropertyRedirects=(OldName="/Script/Sigurd.CombatComponent.weaponInventory",NewName="/Script/Sigurd.CombatComponent.WeaponInventory")
 +EnumRedirects=(OldName="/Script/Sigurd.Condition",NewName="/Script/Sigurd.ECondition")
 +EnumRedirects=(OldName="/Script/Sigurd.Reaction",NewName="/Script/Sigurd.EReaction")
++ClassRedirects=(OldName="/Script/Sigurd.COmbatAbility",NewName="/Script/Sigurd.CombatAbility")
++PropertyRedirects=(OldName="/Script/Sigurd.CombatComponent.LightAttackClass",NewName="/Script/Sigurd.CombatComponent.Ability1Class")
++PropertyRedirects=(OldName="/Script/Sigurd.CombatComponent.LightAttack",NewName="/Script/Sigurd.CombatComponent.Ability1")
++FunctionRedirects=(OldName="/Script/Sigurd.CombatComponent.Attack2",NewName="/Script/Sigurd.CombatComponent.LightAttack")
++PropertyRedirects=(OldName="/Script/Sigurd.CombatComponent.OwnedAbilities",NewName="/Script/Sigurd.CombatComponent.AbilityInventory")
 
