refactor combat componet / weapon system

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -244,4 +244,5 @@ bUseCustomFontDPI=False
 +PropertyRedirects=(OldName="/Script/Sigurd.CombatComponent.LightAttack",NewName="/Script/Sigurd.CombatComponent.Ability1")
 +FunctionRedirects=(OldName="/Script/Sigurd.CombatComponent.Attack2",NewName="/Script/Sigurd.CombatComponent.LightAttack")
 +PropertyRedirects=(OldName="/Script/Sigurd.CombatComponent.OwnedAbilities",NewName="/Script/Sigurd.CombatComponent.AbilityInventory")
++PropertyRedirects=(OldName="/Script/Sigurd.CombatComponent.WeaponInventory",NewName="/Script/Sigurd.CombatComponent.WeaponDataInventory")
 
