--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -8,4 +8,7 @@ FastReplication=False
 InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="Actor",DevComment="")
++GameplayTagList=(Tag="Actor.Enemy",DevComment="")
++GameplayTagList=(Tag="Actor.Player",DevComment="")
 
