movable items added

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Levels/DemoLevels/Main.Main
-EditorStartupMap=/Game/Levels/DemoLevels/Main.Main
+EditorStartupMap=/Game/Levels/Dev/UI_Testing.UI_Testing
 GlobalDefaultGameMode=/Game/Blueprints/GameModes/HNS_GameMode.HNS_GameMode_C
 
 [/Script/Engine.RendererSettings]
