New Enemy Settings
USTRUCT(BlueprintType)
struct FEnemyType : public FTableRowBase

But senses are not working

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -237,6 +237,7 @@ bUseCustomFontDPI=False
 +PropertyRedirects=(OldName="/Script/Sigurd.CombatComponent.currentWeapon",NewName="/Script/Sigurd.CombatComponent.CurrentWeapon")
 +PropertyRedirects=(OldName="/Script/Sigurd.CombatComponent.weaponInventory",NewName="/Script/Sigurd.CombatComponent.WeaponInventory")
 +ClassRedirects=(OldName="/Script/Sigurd.IEnemyAI",NewName="/Script/Sigurd.IEnemyAI")
++StructRedirects=(OldName="/Script/Sigurd.EnemyType",NewName="/Script/Sigurd.EnemyType")
 
 [/Script/NavigationSystem.RecastNavMesh]
 RuntimeGeneration=DynamicModifiersOnly
