prep for secondary hand/weapon

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -245,4 +245,6 @@ bUseCustomFontDPI=False
 +FunctionRedirects=(OldName="/Script/Sigurd.CombatComponent.Attack2",NewName="/Script/Sigurd.CombatComponent.LightAttack")
 +PropertyRedirects=(OldName="/Script/Sigurd.CombatComponent.OwnedAbilities",NewName="/Script/Sigurd.CombatComponent.AbilityInventory")
 +PropertyRedirects=(OldName="/Script/Sigurd.CombatComponent.WeaponInventory",NewName="/Script/Sigurd.CombatComponent.WeaponDataInventory")
++PropertyRedirects=(OldName="/Script/Sigurd.CombatComponent.DefaultWeapon",NewName="/Script/Sigurd.CombatComponent.RightHandWeapon")
++PropertyRedirects=(OldName="/Script/Sigurd.CombatComponent.EquippedWeapon",NewName="/Script/Sigurd.CombatComponent.RightHandWeapon")
 
