Added Texture noise settings table

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -247,4 +247,6 @@ bUseCustomFontDPI=False
 +PropertyRedirects=(OldName="/Script/Sigurd.CombatComponent.WeaponInventory",NewName="/Script/Sigurd.CombatComponent.WeaponDataInventory")
 +PropertyRedirects=(OldName="/Script/Sigurd.CombatComponent.DefaultWeapon",NewName="/Script/Sigurd.CombatComponent.RightHandWeapon")
 +PropertyRedirects=(OldName="/Script/Sigurd.CombatComponent.EquippedWeapon",NewName="/Script/Sigurd.CombatComponent.RightHandWeapon")
++StructRedirects=(OldName="/Script/Sigurd.TextureSetting",NewName="/Script/Sigurd.TextureSetting")
++PropertyRedirects=(OldName="/Script/Sigurd.MapGen.NoiseSettings",NewName="/Script/Sigurd.MapGen.NoiseSettingsTable")
 
