data tables, save/load, refactor, visual style

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -19,3 +19,7 @@ bCanChangeGamepadType=True
 +ControllerData=/Game/Input/GamepadData.GamepadData_C
 +ControllerData=/Game/Input/KeyboardData.KeyboardData_C
 
+[/Script/AdvancedNoise.AdvancedNoiseSettings]
+bEnablePlugin=True
+NoiseParametersTable=/Game/TestingPlugin/DT_AdvancedNoise.DT_AdvancedNoise
+
