--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -259,4 +259,6 @@ bUseCustomFontDPI=False
 +PropertyRedirects=(OldName="/Script/Sigurd.CombatComponent.EquippedWeapon",NewName="/Script/Sigurd.CombatComponent.RightHandWeapon")
 +StructRedirects=(OldName="/Script/Sigurd.TextureSetting",NewName="/Script/Sigurd.TextureSetting")
 +PropertyRedirects=(OldName="/Script/Sigurd.MapGen.NoiseSettings",NewName="/Script/Sigurd.MapGen.NoiseSettingsTable")
++ClassRedirects=(OldName="/Script/Sigurd.AdvancedNoise",NewName="/Script/Sigurd.AdvancedNoise")
++ClassRedirects=(OldName="/Script/Sigurd.AdvancedNoise",NewName="/Script/Sigurd.AdvancedNoise")
 
