last used settings

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -261,4 +261,5 @@ bUseCustomFontDPI=False
 +PropertyRedirects=(OldName="/Script/Sigurd.MapGen.NoiseSettings",NewName="/Script/Sigurd.MapGen.NoiseSettingsTable")
 +ClassRedirects=(OldName="/Script/Sigurd.AdvancedNoise",NewName="/Script/Sigurd.AdvancedNoise")
 +ClassRedirects=(OldName="/Script/Sigurd.AdvancedNoise",NewName="/Script/Sigurd.AdvancedNoise")
++ClassRedirects=(OldName="/Script/Sigurd.FTextureGen",NewName="/Script/Sigurd.TextureGen")
 
