--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -22,4 +22,6 @@ bCanChangeGamepadType=True
 [/Script/AdvancedNoise.AdvancedNoiseSettings]
 bEnablePlugin=True
 NoiseParametersTable=/Game/TestingPlugin/DT_AdvancedNoise.DT_AdvancedNoise
+ExportPath=(Path="C:/Proyects/Sigurd/Content/TestingPlugin")
+TextureSize=(X=1000.000000,Y=1000.000000)
 
