--- a/Plugins/AdvancedNoise/Config/DefaultAdvancedNoise.ini
+++ b/Plugins/AdvancedNoise/Config/DefaultAdvancedNoise.ini
@@ -1,2 +1,3 @@
 ﻿[CoreRedirects]
 +ClassRedirects=(OldName="/Script/AdvancedNoise.TextureGen",NewName="/Script/AdvancedNoise.FTextureGen")
++EnumRedirects=(OldName="/Script/AdvancedNoise.ENoiseType",NewName="/Script/AdvancedNoise.EAdvancedNoiseType")
